--- a/index.html
+++ b/index.html
@@ -1,42 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+        />
 
-    <link rel="stylesheet" href="style.css">
-    <title>FoodSync</title>
-</head>
-<body>
-    <div id="queroDoar"></div>
-    <div id="sobreNos">
-        <div class="cabecalho">
-            <h1>Sobre Nós</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique officia optio in esse iusto aliquid saepe a assumenda accusantium quo alias sapiente voluptates necessitatibus accusamus reprehenderit, autem maxime dicta ea ducimus sint tempore. Earum dolores totam fuga ex. Illum voluptatum distinctio rerum omnis odio delectus nisi facilis laudantium dolor excepturi accusantium voluptates maxime velit asperiores recusandae, cumque cupiditate labore obcaecati voluptate, qui, iure ducimus ipsa voluptatibus possimus. Blanditiis id quisquam dolores inventore nemo praesentium harum eaque voluptatibus, optio animi ipsa labore cum accusamus! Nostrum eos numquam perferendis laborum nulla labore repellendus aut asperiores neque, distinctio atque, unde nam necessitatibus minus..</p>
+        <link rel="stylesheet" href="style.css" />
+        <title>FoodSync</title>
+    </head>
+    <body>
+        <div id="queroDoar">
+            <nav
+                class="navbar navbar-expand-lg"
+                style="background-color: #23942c"
+            >
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="#">FoodSync</a>
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div
+                        class="collapse navbar-collapse"
+                        id="navbarSupportedContent"
+                    >
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a
+                                    class="nav-link active text-white"
+                                    aria-current="page"
+                                    href="#"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#"
+                                    >Sobre nós</a
+                                >
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#"
+                                    >Contato</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 cadastro">
-                    <h2>Cadastro de doações</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="bi bi-truck"></i>
-                </div>
-                <div class="col-lg-3 cadastro">
-                    <h2>Notificações</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <i class="bi bi-phone-vibrate"></i>
-                </div>
-                <div class="col-lg-3 cadastro">
-                    <h2>Entrega Ágil</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="bi bi-mailbox"></i>
+        <div id="sobreNos">
+            <div class="cabecalho">
+                <h1>Sobre Nós</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Similique officia optio in esse iusto aliquid saepe a
+                    assumenda accusantium quo alias sapiente voluptates
+                    necessitatibus accusamus reprehenderit, autem maxime dicta
+                    ea ducimus sint tempore. Earum dolores totam fuga ex. Illum
+                    voluptatum distinctio rerum omnis odio delectus nisi facilis
+                    laudantium dolor excepturi accusantium voluptates maxime
+                    velit asperiores recusandae, cumque cupiditate labore
+                    obcaecati voluptate, qui, iure ducimus ipsa voluptatibus
+                    possimus. Blanditiis id quisquam dolores inventore nemo
+                    praesentium harum eaque voluptatibus, optio animi ipsa
+                    labore cum accusamus! Nostrum eos numquam perferendis
+                    laborum nulla labore repellendus aut asperiores neque,
+                    distinctio atque, unde nam necessitatibus minus..
+                </p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 cadastro">
+                        <h2>Cadastro de doações</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                        </p>
+                        <i class="bi bi-truck"></i>
+                    </div>
+                    <div class="col-lg-3 cadastro">
+                        <h2>Notificações</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit.
+                        </p>
+                        <i class="bi bi-phone-vibrate"></i>
+                    </div>
+                    <div class="col-lg-3 cadastro">
+                        <h2>Entrega Ágil</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                        </p>
+                        <i class="bi bi-mailbox"></i>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="faleConosco"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-</body>
+        <div id="faleConosco"></div>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
