implementada a tela inicial e corrigido alguns detalhes do css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <title>FoodSync</title>
     </head>
     <body>
-        <div id="queroDoar">
+        <div id="queroDoar" class="vh-100">
             <nav
                 class="navbar navbar-expand-lg"
                 style="background-color: #23942c"
@@ -63,6 +63,22 @@
                     </div>
                 </div>
             </nav>
+            <div
+                class="d-flex justify-content-center align-items-center align-self-center vh-100"
+            >
+                <div class="d-flex flex-column">
+                    <img src="imagens/foodsync_horizontal.png" alt="FoodSync" />
+                    <p class="text-white">
+                        Conectando doações. Alimentando Esperanças.
+                    </p>
+                    <button
+                        class="btn text-white w-50 m-auto"
+                        style="background-color: #23942c"
+                    >
+                        Quero doar!
+                    </button>
+                </div>
+            </div>
         </div>
         <div id="sobreNos">
             <div class="cabecalho">
