--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
             <nav
                 class="navbar navbar-expand-lg"
                 style="background-color: #23942c"
+                data-bs-theme="dark"
             >
                 <div class="container-fluid">
-                    <a class="navbar-brand text-white" href="#">FoodSync</a>
+                    <a class="navbar-brand text-white h1 my-auto" href="#"
+                        >FoodSync</a
+                    >
                     <button
                         class="navbar-toggler"
                         type="button"
@@ -41,7 +44,7 @@
                         id="navbarSupportedContent"
                     >
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a
                                     class="nav-link active text-white"
                                     aria-current="page"
@@ -49,12 +52,12 @@
                                     >Home</a
                                 >
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a class="nav-link text-white" href="#"
                                     >Sobre nós</a
                                 >
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a class="nav-link text-white" href="#"
                                     >Contato</a
                                 >
@@ -72,7 +75,7 @@
                         Conectando doações. Alimentando Esperanças.
                     </p>
                     <button
-                        class="btn text-white w-50 m-auto"
+                        class="btn text-white w-75 m-auto"
                         style="background-color: #23942c"
                     >
                         Quero doar!
