--- a/index.html
+++ b/index.html
@@ -132,7 +132,46 @@
                 </div>
             </div>
         </div>
-        <div id="faleConosco"></div>
+        <div id="faleConosco" class="container my-5">
+        <div class="row">
+            <div class="col-md-7">
+                <h2 class="mb-2">Fale Conosco</h2>
+                <p  class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eaque distinctio quas, cumque culpa dolores?</p>
+
+                <form>
+                    <div class="row mb-3 mt-3">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Nome" required>
+                        </div>
+                        <div class="col">
+                            <input type="email" class="form-control" placeholder="E-mail" required>
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <input type="tel" class="form-control" placeholder="Telefone">
+                    </div>
+
+                    <div class="mb-3">
+                        <textarea class="form-control" rows="4" placeholder="Digite sua mensagem aqui..." required></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-md" style="background-color: #23942c; color: white;" >Enviar</button>
+                </form>
+            </div>
+
+            <div class="col-md-5">
+                <div class="bg-light p-4 rounded shadow-sm">
+                    <h4>Atendimento</h4>
+                    <p class="mt-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corrupti asperiores, ipsum deserunt suscipit natus veritatis atque distinctio totam minima?</p>
+                    <p class="mt-2"><i class="bi bi-telephone fs-5 me-2" style="color: #23942c;" ></i><strong>+55 (11) 99264-9785</strong></p>
+                    <p class="mt-2"><i class="bi bi-envelope fs-5 me-2" style="color: #23942c;" ></i><strong>foodsync@gmail.com</strong></p>
+                    <p class="mt-2"><i class="bi bi-clock fs-5 me-2" style="color: #23942c;" ></i><strong>Horário de Atendimento</strong><br><span class="d-block mt-2">Seg a Sex, das 9h às 22h</span> <span class="d-block">Sáb e feriados: 10h às 14h</span></p>
+                </div>
+            </div>
+        </div>
+
+    </div>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
