--- a/index.html
+++ b/index.html
@@ -132,18 +132,18 @@
                 </div>
             </div>
         </div>
-        <div id="faleConosco" class="container my-5">
-        <div class="row">
+        <div id="faleConosco" class="container py-5">
+        <div class="row g-4">
             <div class="col-md-7">
-                <h2 class="mb-2">Fale Conosco</h2>
-                <p  class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eaque distinctio quas, cumque culpa dolores?</p>
+                <h2 class="fw-bold mb-4">Fale Conosco</h2>
+                <p  class="mb-4">Tem dúvidas, sugestões ou precisa de ajuda? Envie sua mensagem e responderemos em breve.</p>
 
                 <form>
-                    <div class="row mb-3 mt-3">
-                        <div class="col">
+                    <div class="row g-3 mb-3">
+                        <div class="col-md-6">
                             <input type="text" class="form-control" placeholder="Nome" required>
                         </div>
-                        <div class="col">
+                        <div class="col-md-6">
                             <input type="email" class="form-control" placeholder="E-mail" required>
                         </div>
                     </div>
@@ -156,17 +156,17 @@
                         <textarea class="form-control" rows="4" placeholder="Digite sua mensagem aqui..." required></textarea>
                     </div>
 
-                    <button type="submit" class="btn btn-md" style="background-color: #23942c; color: white;" >Enviar</button>
+                    <button type="submit" class="btn px-4 py-2" style="background-color: #23942c; color: white;" >Enviar</button>
                 </form>
             </div>
 
             <div class="col-md-5">
-                <div class="bg-light p-4 rounded shadow-sm">
-                    <h4>Atendimento</h4>
-                    <p class="mt-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corrupti asperiores, ipsum deserunt suscipit natus veritatis atque distinctio totam minima?</p>
-                    <p class="mt-2"><i class="bi bi-telephone fs-5 me-2" style="color: #23942c;" ></i><strong>+55 (11) 99264-9785</strong></p>
-                    <p class="mt-2"><i class="bi bi-envelope fs-5 me-2" style="color: #23942c;" ></i><strong>foodsync@gmail.com</strong></p>
-                    <p class="mt-2"><i class="bi bi-clock fs-5 me-2" style="color: #23942c;" ></i><strong>Horário de Atendimento</strong><br><span class="d-block mt-2">Seg a Sex, das 9h às 22h</span> <span class="d-block">Sáb e feriados: 10h às 14h</span></p>
+                <div class="bg-light p-4 rounded shadow-sm h-100">
+                    <h4 class="fw-bold">Atendimento</h4>
+                    <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corrupti asperiores, ipsum deserunt suscipit natus veritatis atque distinctio totam minima?</p>
+                    <p><i class="bi bi-telephone fs-5 me-2" style="color: #23942c;" ></i><strong>+55 (11) 99264-9785</strong></p>
+                    <p><i class="bi bi-envelope fs-5 me-2" style="color: #23942c;" ></i><strong>foodsync@gmail.com</strong></p>
+                    <p><i class="bi bi-clock fs-5 me-2" style="color: #23942c;" ></i><strong>Horário de Atendimento</strong><br><span class="d-block mt-2">Seg a Sex, das 9h às 22h</span> <span class="d-block">Sáb e feriados: 10h às 14h</span></p>
                 </div>
             </div>
         </div>
