ajustes finais e refinamento da seção Fale Conosco

--- a/index.html
+++ b/index.html
@@ -134,36 +134,40 @@
         </div>
         <div id="faleConosco" class="container py-5">
         <div class="row g-4">
-            <div class="col-md-7">
+            <div class="col-md-7 me-5">
                 <h2 class="fw-bold mb-4">Fale Conosco</h2>
                 <p  class="mb-4">Tem dúvidas, sugestões ou precisa de ajuda? Envie sua mensagem e responderemos em breve.</p>
 
                 <form>
                     <div class="row g-3 mb-3">
                         <div class="col-md-6">
-                            <input type="text" class="form-control" placeholder="Nome" required>
+                            <label class="form-label">Nome</label>
+                            <input type="text" class="form-control" placeholder="Seu Nome" required>
                         </div>
                         <div class="col-md-6">
-                            <input type="email" class="form-control" placeholder="E-mail" required>
+                            <label class="form-label">E-mail</label>
+                            <input type="email" class="form-control" placeholder="seuemail@exemplo.com" required>
                         </div>
                     </div>
 
                     <div class="mb-3">
-                        <input type="tel" class="form-control" placeholder="Telefone">
+                        <label class="form-label">Telefone</label>
+                        <input type="tel" class="form-control" placeholder="(11) 91234-5678">
                     </div>
 
                     <div class="mb-3">
-                        <textarea class="form-control" rows="4" placeholder="Digite sua mensagem aqui..." required></textarea>
+                        <label class="form-label">Mensagem</label>
+                        <textarea class="form-control" rows="5" placeholder="Digite sua mensagem aqui..." required></textarea>
                     </div>
 
                     <button type="submit" class="btn px-4 py-2" style="background-color: #23942c; color: white;" >Enviar</button>
                 </form>
             </div>
 
-            <div class="col-md-5">
-                <div class="bg-light p-4 rounded shadow-sm h-100">
-                    <h4 class="fw-bold">Atendimento</h4>
-                    <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corrupti asperiores, ipsum deserunt suscipit natus veritatis atque distinctio totam minima?</p>
+            <div class="col-md-4">
+                <div class="bg-body-secondary p-4 rounded shadow-sm">
+                    <h4 class="fw-bold mb-2">Central de Atendimento</h4>
+                    <p class="mb-2"></p>
                     <p><i class="bi bi-telephone fs-5 me-2" style="color: #23942c;" ></i><strong>+55 (11) 99264-9785</strong></p>
                     <p><i class="bi bi-envelope fs-5 me-2" style="color: #23942c;" ></i><strong>foodsync@gmail.com</strong></p>
                     <p><i class="bi bi-clock fs-5 me-2" style="color: #23942c;" ></i><strong>Horário de Atendimento</strong><br><span class="d-block mt-2">Seg a Sex, das 9h às 22h</span> <span class="d-block">Sáb e feriados: 10h às 14h</span></p>
