--- a/login.html
+++ b/login.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <title>FoodySync - Login</title>
-</head>
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="style.css" />
+        <title>FoodySync - Login</title>
+    </head>
+    <body>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+            crossorigin="anonymous"
+        ></script>
+        <div class="container-fluid">
+            <div class="row vh-100">
+                <div
+                    id="login_esquerda"
+                    class="justify-content-center align-items-center d-flex col-7 text-white h-100"
+                >
+                    <div class="d-flex flex-column" style="width: 40%">
+                        <img
+                            class="d-block mx-auto ms-0 mb-4"
+                            src="imagens/foodsync_vertical.png"
+                            alt="FoodSync"
+                        />
+                        <div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Perferendis a voluptate soluta
+                                libero, suscipit sed aspernatur odit voluptatum
+                                culpa dolorem, maiores nulla enim nobis
+                                inventore deleniti molestiae quis possimus iste
+                                pariatur velit ab esse ipsum! Quaerat, dolore
+                                eaque. Cupiditate aliquid dolorem minus minima
+                                tempora dolores ea aperiam corporis consequatur?
+                                Magnam.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Aut, labore expedita
+                                perspiciatis at iure error adipisci quis, omnis
+                                ad eligendi, totam voluptatem? Quam sapiente
+                                ratione, aliquam consectetur veniam libero
+                                corrupti dignissimos exercitationem quasi id
+                                rerum. Harum ea quidem, necessitatibus maiores
+                                consequatur facere unde earum ratione voluptas
+                                quos, vitae asperiores quaerat?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="justify-content-center align-items-center d-flex col-5 text-white h-100"
+                >
+                    <div class="d-flex flex-column" style="width: 35%">
+                        <img
+                            class="d-block mx-auto mb-5"
+                            src="imagens/foodsync.png"
+                            alt="FoodSync"
+                        />
+                        <input
+                            type="text"
+                            class="border rounded form-control mb-2 mt-5"
+                            placeholder="Seu CPF/CNPJ"
+                        />
+                        <input
+                            type="text"
+                            class="border rounded form-control mt-2 mb-5"
+                            placeholder="Sua senha"
+                        />
+                        <button
+                            id="btn_entrar"
+                            class="btn p-2 text-white mb-2 mt-5"
+                        >
+                            Entrar
+                        </button>
+                        <button
+                            id="btn_criar_conta"
+                            class="btn p-2 text-body mt-2"
+                        >
+                            Não tenho uma conta
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
