--- a/index.html
+++ b/index.html
@@ -88,20 +88,18 @@
             <div class="cabecalho">
                 <h1>Sobre Nós</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Similique officia optio in esse iusto aliquid saepe a
-                    assumenda accusantium quo alias sapiente voluptates
-                    necessitatibus accusamus reprehenderit, autem maxime dicta
-                    ea ducimus sint tempore. Earum dolores totam fuga ex. Illum
-                    voluptatum distinctio rerum omnis odio delectus nisi facilis
-                    laudantium dolor excepturi accusantium voluptates maxime
-                    velit asperiores recusandae, cumque cupiditate labore
-                    obcaecati voluptate, qui, iure ducimus ipsa voluptatibus
-                    possimus. Blanditiis id quisquam dolores inventore nemo
-                    praesentium harum eaque voluptatibus, optio animi ipsa
-                    labore cum accusamus! Nostrum eos numquam perferendis
-                    laborum nulla labore repellendus aut asperiores neque,
-                    distinctio atque, unde nam necessitatibus minus..
+                    Somos a FoodSync, uma iniciativa que nasceu com o propósito
+                    de unir tecnologia, responsabilidade social e
+                    sustentabilidade. Nosso principal objetivo é combater a
+                    insegurança alimentar por meio de uma plataforma que conecta
+                    doadores de alimentos como restaurantes, padarias e
+                    residências a organizações que realizam a redistribuição
+                    para pessoas em situação de vulnerabilidade. Acreditamos que
+                    a tecnologia pode ser uma grande aliada na luta contra a
+                    fome e o desperdício. Por isso, desenvolvemos uma solução
+                    que facilita a identificação de pontos de coleta de
+                    alimentos, tornando o processo mais ágil, eficiente e
+                    acessível.
                 </p>
             </div>
             <div class="container">
@@ -109,24 +107,32 @@
                     <div class="col-lg-3 cadastro">
                         <h2>Cadastro de doações</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
+                            Doadores podem cadastrar facilmente alimentos
+                            disponíveis para doação na nossa plataforma. O
+                            processo é rápido, intuitivo e garante que o
+                            alimento chegue a quem realmente precisa.
                         </p>
                         <i class="bi bi-truck"></i>
                     </div>
                     <div class="col-lg-3 cadastro">
                         <h2>Notificações</h2>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit.
+                            ONGs e instituições cadastradas recebem notificações
+                            em tempo real sobre novas doações disponíveis em sua
+                            região. Isso agiliza a coleta e evita o desperdício,
+                            garantindo que os alimentos sejam redistribuídos a
+                            tempo.
                         </p>
                         <i class="bi bi-phone-vibrate"></i>
                     </div>
                     <div class="col-lg-3 cadastro">
                         <h2>Entrega Ágil</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
+                            Com base na localização dos doadores e das
+                            instituições, facilitamos uma logística rápida e
+                            eficiente para a retirada dos alimentos, priorizando
+                            rotas curtas e entregas pontuais. Mais agilidade,
+                            menos desperdício.
                         </p>
                         <i class="bi bi-mailbox"></i>
                     </div>
