--- a/login.html
+++ b/login.html
@@ -32,26 +32,20 @@
                         />
                         <div>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Perferendis a voluptate soluta
-                                libero, suscipit sed aspernatur odit voluptatum
-                                culpa dolorem, maiores nulla enim nobis
-                                inventore deleniti molestiae quis possimus iste
-                                pariatur velit ab esse ipsum! Quaerat, dolore
-                                eaque. Cupiditate aliquid dolorem minus minima
-                                tempora dolores ea aperiam corporis consequatur?
-                                Magnam.
-                            </p>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Aut, labore expedita
-                                perspiciatis at iure error adipisci quis, omnis
-                                ad eligendi, totam voluptatem? Quam sapiente
-                                ratione, aliquam consectetur veniam libero
-                                corrupti dignissimos exercitationem quasi id
-                                rerum. Harum ea quidem, necessitatibus maiores
-                                consequatur facere unde earum ratione voluptas
-                                quos, vitae asperiores quaerat?
+                                Somos a FoodSync, uma iniciativa que nasceu com
+                                o propósito de unir tecnologia, responsabilidade
+                                social e sustentabilidade. Nosso principal
+                                objetivo é combater a insegurança alimentar por
+                                meio de uma plataforma que conecta doadores de
+                                alimentos como restaurantes, padarias e
+                                residências a organizações que realizam a
+                                redistribuição para pessoas em situação de
+                                vulnerabilidade. Acreditamos que a tecnologia
+                                pode ser uma grande aliada na luta contra a fome
+                                e o desperdício. Por isso, desenvolvemos uma
+                                solução que facilita a identificação de pontos
+                                de coleta de alimentos, tornando o processo mais
+                                ágil, eficiente e acessível.
                             </p>
                         </div>
                     </div>
