adicionados links navbar

--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
                                 <a
                                     class="nav-link active text-white"
                                     aria-current="page"
-                                    href="#"
                                     >Home</a
                                 >
                             </li>
                             <li class="nav-item px-2">
-                                <a class="nav-link text-white" href="#"
+                                <a class="nav-link text-white" href="#sobre_nos"
                                     >Sobre nós</a
                                 >
                             </li>
                             <li class="nav-item px-2">
-                                <a class="nav-link text-white" href="#"
+                                <a
+                                    class="nav-link text-white"
+                                    href="#fale_conosco"
                                     >Contato</a
                                 >
                             </li>
@@ -139,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div id="faleConosco" class="container py-5">
+        <div id="fale_conosco" class="container py-5">
             <div class="row g-4">
                 <div class="col-md-7 me-5">
                     <h2 class="fw-bold mb-4">Fale Conosco</h2>
