--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
         />
-
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+        />
         <link rel="stylesheet" href="style.css" />
         <title>FoodSync</title>
     </head>
@@ -64,6 +67,9 @@
                                 >
                             </li>
                         </ul>
+                        <a class="nav-link text-white" href="">
+                            <i class="bi bi-youtube"></i>
+                        </a>
                     </div>
                 </div>
             </nav>
