Finalizado/remoçao da linha 212

--- a/index.html
+++ b/index.html
@@ -209,7 +209,6 @@
                 <div class="col-md-4">
                     <div class="bg-body-secondary p-4 rounded shadow-sm">
                         <h4 class="fw-bold mb-2">Central de Atendimento</h4>
-                        <p class="mb-2"></p>
                         <p>
                             <i
                                 class="bi bi-telephone fs-5 me-2"
@@ -233,9 +232,7 @@
                                 class="d-block mt-2"
                                 >Seg a Sex, das 9h às 22h</span
                             >
-                            <span class="d-block"
-                                >Sáb e feriados: 10h às 14h</span
-                            >
+                            <span class="d-block">Sáb e feriados: 10h às 14h</span>
                         </p>
                     </div>
                 </div>
