--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 >
                             </li>
                         </ul>
-                        <a class="nav-link text-white" href="">
+                        <a class="nav-link text-white" href="https://youtu.be/gRrFmR0NeRw" target="_blank">
                             <i class="bi bi-youtube"></i>
                         </a>
                     </div>
