--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </head>
     <body>
         <div id="quero_doar" class="vh-100">
+            <!-- Navbar -->
             <nav
                 class="navbar navbar-expand-lg"
                 style="background-color: #23942c"
@@ -67,12 +68,14 @@
                                 >
                             </li>
                         </ul>
+                        <!-- Vídeo informativo sobre o projeto -->
                         <a class="nav-link text-white" href="https://www.youtube.com/watch?v=paOSR-duALo" target="_blank">
                             <i class="bi bi-youtube"></i>
                         </a>
                     </div>
                 </div>
             </nav>
+            <!-- Primeira seção -->
             <div
                 class="d-flex justify-content-center align-items-center align-self-center vh-100"
             >
@@ -91,6 +94,7 @@
                 </div>
             </div>
         </div>
+        <!-- Sobre nós | Segunda seção -->
         <div id="sobre_nos">
             <div class="cabecalho">
                 <h1>Sobre Nós</h1>
@@ -146,6 +150,7 @@
                 </div>
             </div>
         </div>
+        <!-- Fale conosco -->
         <div id="fale_conosco" class="container py-5">
             <div class="row g-4">
                 <div class="col-md-7 me-5">
@@ -154,7 +159,7 @@
                         Tem dúvidas, sugestões ou precisa de ajuda? Envie sua
                         mensagem e responderemos em breve.
                     </p>
-
+                    <!-- Cadastro do nome | Contato -->
                     <form>
                         <div class="row g-3 mb-3">
                             <div class="col-md-6">
@@ -166,6 +171,7 @@
                                     required
                                 />
                             </div>
+                            <!-- Cadastro do email | Contato -->
                             <div class="col-md-6">
                                 <label class="form-label">E-mail</label>
                                 <input
@@ -176,7 +182,7 @@
                                 />
                             </div>
                         </div>
-
+                        <!-- Cadastro telefone | Contato -->
                         <div class="mb-3">
                             <label class="form-label">Telefone</label>
                             <input
@@ -185,7 +191,7 @@
                                 placeholder="(11) 91234-5678"
                             />
                         </div>
-
+                        <!-- Cadastro da mensagem | Contato -->
                         <div class="mb-3">
                             <label class="form-label">Mensagem</label>
                             <textarea
@@ -205,7 +211,7 @@
                         </button>
                     </form>
                 </div>
-
+                <!-- Central de atendimento | Contato -->
                 <div class="col-md-4">
                     <div class="bg-body-secondary p-4 rounded shadow-sm">
                         <h4 class="fw-bold mb-2">Central de Atendimento</h4>
