--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                             <div class="col-md-6">
                                 <label class="form-label">E-mail</label>
                                 <input
+                                    id="email"
                                     type="email"
                                     class="form-control"
                                     placeholder="seuemail@exemplo.com"
