--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link 
+            rel="stylesheet" 
+            href="style.css" />
         <title>FoodSync</title>
     </head>
     <body>
@@ -160,7 +162,9 @@
                         mensagem e responderemos em breve.
                     </p>
                     <!-- Cadastro do nome | Contato -->
-                    <form>
+                    <form 
+                        onsubmit="return validarMensagem()"
+                    >
                         <div class="row g-3 mb-3">
                             <div class="col-md-6">
                                 <label class="form-label">Nome</label>
@@ -175,7 +179,6 @@
                             <div class="col-md-6">
                                 <label class="form-label">E-mail</label>
                                 <input
-                                    id="email"
                                     type="email"
                                     class="form-control"
                                     placeholder="seuemail@exemplo.com"
@@ -194,13 +197,19 @@
                         </div>
                         <!-- Cadastro da mensagem | Contato -->
                         <div class="mb-3">
-                            <label class="form-label">Mensagem</label>
+                            <label class="form-label" for="mensagem">Mensagem</label>
                             <textarea
+                                id="mensagem"
+                                name="mensagem"
                                 class="form-control"
                                 rows="5"
                                 placeholder="Digite sua mensagem aqui..."
                                 required
                             ></textarea>
+                            <p 
+                                id="erroMensagem" 
+                                style="color: rgb(255, 0, 0);"
+                            ></p>
                         </div>
 
                         <button
@@ -250,5 +259,6 @@
             integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
             crossorigin="anonymous"
         ></script>
+        <script src="JS/script.js"></script>
     </body>
 </html>
