--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
             <div class="row vh-100">
                 <div
                     id="login_esquerda"
-                    class="justify-content-center align-items-center d-flex col-7 text-white h-100"
+                    class="justify-content-center align-items-center d-flex col-lg-7 text-white h-100 row"
                 >
-                    <div class="d-flex flex-column" style="width: 40%">
+                    <div class="d-flex flex-column col-lg-6 col-md-8 col-10">
                         <img
                             class="d-block mx-auto ms-0 mb-4"
                             src="imagens/foodsync_vertical.png"
@@ -51,9 +51,9 @@
                     </div>
                 </div>
                 <div
-                    class="justify-content-center align-items-center d-flex col-5 text-white h-100"
+                    class="justify-content-center align-items-center d-flex col-lg-5 text-white h-100 row"
                 >
-                    <div class="d-flex flex-column" style="width: 35%">
+                    <div class="d-flex flex-column w-50">
                         <img
                             class="d-block mx-auto mb-5"
                             src="imagens/foodsync.png"
