--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
                             placeholder="Seu CPF/CNPJ"
                         />
                         <input
-                            type="text"
+                            type="password"
                             class="border rounded form-control mt-2 mb-5"
                             placeholder="Sua senha"
                         />
