link do youtube

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <!-- Vídeo informativo sobre o projeto -->
                         <a
                             class="nav-link text-white"
-                            href="https://www.youtube.com/watch?v=paOSR-duALo"
+                            href="https://youtu.be/vjOHLfAzz7U"
                             target="_blank"
                         >
                             <i class="bi bi-youtube"></i>
